--- a/style.css
+++ b/style.css
@@ -391,6 +391,7 @@ section:nth-child(2n + 1) {
     width: 75%;
     display: flex;
     flex-direction: column;
+    margin-bottom: 4em;
 }
 .work {
     border: 2px solid black;
@@ -402,18 +403,45 @@ section:nth-child(2n + 1) {
 .work:nth-child(2n) {
     margin: 5px 5px 5px auto;
 }
+
+.work::after {
+    content: '';
+    position: absolute;
+    top: 25%;
+    background-color: rebeccapurple;
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    z-index: 10;
+    right: -24.7%;
+}
+
+.work:nth-child(2n)::after {
+    left: -23.7%;
+}
+
 .track {
     position: absolute;
     height: 75%;
-    top: 12.5%;
+    top: 7%;
     left: 50%;
     width:0;
     border: 2px dotted teal;
 }
+
+
 #plane {
     position: sticky;
+    top:25%;
+    transform: rotate(90deg);
+    color: #2857a4;
+    z-index: 11;
 }
 
+
+
+
+/*
 .point1, .point2, .point3, .point4 {
     position: absolute;
     height: 10px;
@@ -423,6 +451,7 @@ section:nth-child(2n + 1) {
     border-radius: 50%;
     overflow: hidden;
 }
+
 .point1 {
     margin-top: 10%;    
 }
@@ -435,5 +464,6 @@ section:nth-child(2n + 1) {
 .point4 {
     margin-top: 750px;    
 }
+*/
 
 /* psuedo */
