--- a/style.css
+++ b/style.css
@@ -556,3 +556,34 @@ section:nth-child(2n + 1) {
 .mb-light-purple {
     background-color: #93738c;
 }
+
+
+
+@media screen and (max-width : 900px) {
+    
+    .track {
+        left: 5%;
+    }
+
+    .timeline-box {
+        left: 12% !important;
+        width: 80%;
+    }
+
+    /* .timeline-box:nth-child(2n) {
+        left: 12%;
+    } */
+
+    /* .timeline-box:nth-child(2n+1)::after {
+        left: -9.5%;
+    }
+    
+    .timeline-box:nth-child(2n)::after {
+        left: -9.5%;
+    } */
+
+    .timeline-box::after {
+        left : -9.5% !important;
+    }
+
+}
